fixed background bug on IOS

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,12 @@
 }
 
 body {
+  background-color: #000; /* or 'black' if preferred */
+  color: #fff; /* text color */
+}
+
+
+/* body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -24,4 +30,4 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
